# apicall

./: Cargo.toml
rest_api/: configs.py  main.py  mongo_db_frame.py
rest_api/static/css/: styles.css
rest_api/templates/: index.html  macros.html
src/: lib.rs  main.rs
