[package]
name = "apicall"
version = "0.1.0"
authors = ["Nikola Kolev <nikolakolev712@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }